# Hegemon

./: .dockerignore  .gitignore  AGENTS.md  BRAND.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  DEBUG_SYNC.md  DESIGN.md  Dockerfile  Dockerfile.sub  Dockerfile.substrate  FIRST_TEST.md  INTEGRATED_RELEASE_EXECPLAN.md  LICENSE  METHODS.md  Makefile  PROVER_ARCHITECTURE_CONSTRAINTS.tex  PROVER_ARCHITECTURE_CONSTRAINTS.tex.bak  PROVER_SCALABILITY_REPORT.md  README.md  SECURITY.md  TOKENOMICS_CALCULATION.md  build.sh  docker-compose.testnet.yml  docker-compose.yml  doyle-plans.md  recipients_pldd.json  recipients_william.json  recipients_windows.json  rust-toolchain.toml  send.sh  start.sh  state.sh  temp_debug.store
.cargo/: config.toml
circuits/aggregation/: Cargo.toml
circuits/aggregation/src/: lib.rs  v5.rs
circuits/aggregation/tests/: aggregation.rs
circuits/batch/: Cargo.toml
circuits/batch/benches/: batch_vs_individual.rs
circuits/batch/src/: air.rs  constants.rs  error.rs  lib.rs  p3_air.rs  p3_prover.rs  p3_verifier.rs  prover.rs  public_inputs.rs  rpo_prover.rs  rpo_verifier.rs  verifier.rs
circuits/bench/: Cargo.toml
circuits/bench/src/: main.rs
circuits/block/: Cargo.toml
circuits/block-recursion/: Cargo.toml
circuits/block-recursion/src/: artifacts.rs  lib.rs  local_smallwood_poseidon2.rs  prover.rs  public_replay.rs  relation.rs  state.rs  statement.rs  tests.rs  tree_v2.rs  verifier.rs
circuits/block/src/: commitment_air.rs  commitment_constants.rs  commitment_prover.rs  commitment_verifier.rs  error.rs  lib.rs  native_commitment.rs  p3_commitment_air.rs  p3_commitment_prover.rs  p3_commitment_verifier.rs  proof.rs  recursive.rs
circuits/disclosure/: Cargo.toml
circuits/disclosure/src/: air.rs  constants.rs  lib.rs  poseidon2.rs  prover.rs  verifier.rs
circuits/disclosure/tests/: disclosure.rs
circuits/epoch/: Cargo.toml
circuits/epoch/benches/: recursive_proof_bench.rs
circuits/epoch/src/: air.rs  dimensions.rs  lib.rs  light_client.rs  merkle.rs  prover.rs  types.rs
circuits/hegemon-field/: Cargo.toml
circuits/hegemon-field/src/: lib.rs
circuits/plonky3-spike/: Cargo.toml
circuits/plonky3-spike/src/: fibonacci.rs  lib.rs
circuits/receipt-arc-whir/: Cargo.toml
circuits/settlement/: Cargo.toml
circuits/superneo-backend-lattice/: Cargo.toml
circuits/superneo-bench/: Cargo.toml
circuits/superneo-ccs/: Cargo.toml
circuits/superneo-hegemon/: Cargo.toml
circuits/superneo-ring/: Cargo.toml
circuits/transaction/: Cargo.toml  README.md  build.rs
circuits/transaction-core/: Cargo.toml
consensus/: Cargo.toml  POW_RETARGET_EXECPLAN.md  README.md
consensus-light-client/: Cargo.toml
consensus-light-client/src/: lib.rs
consensus/bench/: go.mod
consensus/spec/: block_header.md  consensus_protocol.md
consensus/src/: aggregation.rs  backend_interface.rs  batch_proof.rs  bft.rs  commitment_tree.rs  error.rs  fork_choice.rs  header.rs  import.rs  lib.rs  merge_root_layout.rs  mining.rs  nullifier.rs  pow.rs  proof.rs  proof_interface.rs  receipt_arc_whir.rs  retired_aggregation.rs  reward.rs  substrate.rs  substrate_pow.rs  types.rs  validator.rs  version_policy.rs
consensus/tests/: commitment_proof_handoff.rs  common.rs  da_sampling.rs  fuzz.rs  parallel_verification.rs  pow_algorithm.rs  pow_rules.rs  pq_runtime_compat.rs  raw_active_mode.rs  recursive_proof.rs  self_contained_mode.rs  simulation.rs  version_policy.rs
crypto/: Cargo.toml  README.md
crypto/examples/: gen_vectors.rs
crypto/src/: deterministic.rs  error.rs  hashes.rs  lib.rs  ml_dsa.rs  ml_kem.rs  note_encryption.rs  slh_dsa.rs  traits.rs
crypto/tests/: crypto_vectors.rs  vectors.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: common.rs  native_tx_leaf_artifact.rs  receipt_root_artifact.rs
network/: Cargo.toml  P2P_EXECPLAN.md  PEER_STORE_EXECPLAN.md
network/src/: lib.rs  nat.rs  native_transport.rs  network_backend.rs  p2p.rs  peer_manager.rs  peer_store.rs  pq_transport.rs  protocol.rs  queue_budget.rs  service.rs  substrate_transport.rs  wire.rs
network/tests/: adversarial.rs  handshake.rs  p2p_integration.rs  pq_handshake.rs
node/: Cargo.toml  README.md
node/examples/: hegemon_loopback_bridge.rs
node/src/: api.rs  bootstrap.rs  chain_spec.rs  codec.rs  config.rs  dashboard.rs  error.rs  lib.rs  mempool.rs  miner.rs  pow.rs  service.rs  shielded_coinbase.rs  storage.rs  sync.rs  telemetry.rs  test_utils.rs  transaction.rs  ui.rs
node/static/: block-dashboard.html  dashboard.css
node/tests/: api_auth.rs  bootstrap.rs  network.rs  sync.rs
pq-noise/: Cargo.toml
pq-noise/src/: codec.rs  config.rs  error.rs  handshake.rs  lib.rs  noise.rs  session.rs  transport.rs  types.rs
runtime/: Cargo.toml  build.rs
runtime/src/: apis.rs  chain_spec.rs  lib.rs  manifest.rs
runtime/tests/: block_builder_inherents.rs  coinbase_flow.rs  kernel_wallet_transfer.rs  pow_smoke.rs  pow_smoke.rs.disabled
tests/: Cargo.toml  block_flow.rs  epoch_sync.rs  mining_integration.rs  multi_node_substrate.rs  multinode_integration.rs  node_gossip.rs  node_resilience.rs  node_wallet_daemon.rs  p2p_pq.rs  poseidon_compat.rs  pq_network_integration.rs  pq_params_audit.rs  release_security_posture_checks.sh  rpc_integration.rs  security_pipeline.rs  shielded_e2e.rs  stark_soundness.rs  wallet_e2e.rs
tests/src/: lib.rs
wallet/: Cargo.toml  README.md  WALLET_ROBUSTNESS_EXECPLAN.md
wallet/bench/: Cargo.toml
wallet/examples/: debug_transfer_proof.rs  gen_dev_account.rs  submit_probe.rs
wallet/src/: address.rs  api.rs  async_sync.rs  consolidate.rs  disclosure.rs  error.rs  extrinsic.rs  keys.rs  lib.rs  metadata.rs  multisig.rs  node_rpc.rs  notes.rs  prover.rs  recipients.rs  rpc.rs  scanner.rs  serde_bytes48.rs  shielded_tx.rs  store.rs  submission.rs  substrate_rpc.rs  sync.rs  tx_builder.rs  viewing.rs
wallet/tests/: address_fuzz.rs  cli.rs  debug_addr_tag.rs  disclosure_package.rs  memo_randomization.rs  node_rpc.rs  note_ciphertext_wire_vectors.rs  rpc_flow.rs  substrate_rpc.rs
walletd/: Cargo.toml
walletd/src/: main.rs
(+1230 files in other folders)
