[workspace]
members = [
    "crypto",
    "circuits/transaction",
    "circuits/block",
    "circuits/bench",
    "state/merkle",
    "consensus",
    "protocol/versioning",
    "network",
    "pq-noise",
    "wallet",
    "wallet/bench",
    "pallets/fee-model",
    "pallets/identity",
    "pallets/attestations",
    "pallets/asset-registry",
    "pallets/settlement",
    "pallets/oracles",
    "pallets/feature-flags",
    "pallets/observability",
    "pallets/difficulty",
    "pallets/coinbase",
    "pallets/shielded-pool",
    "tests", "node",
    "runtime",
]
resolver = "2"

[workspace.lints.clippy]
# Allow these lints workspace-wide - they're stylistic, not correctness issues
needless_borrows_for_generic_args = "allow"
redundant_closure = "allow"
manual_div_ceil = "allow"
unnecessary_sort_by = "allow"
useless_conversion = "allow"
doc_overindented_list_items = "allow"
field_reassign_with_default = "allow"
explicit_auto_deref = "allow"
needless_borrow = "allow"
unused_enumerate_index = "allow"
let_and_return = "allow"

[workspace.package]
authors = ["Pauli Group Inc."]
license = "MIT"
repository = "https://github.com/Pauli-Group/Hegemon"

# =============================================================================
# POLKADOT-SDK WORKSPACE DEPENDENCIES
# =============================================================================
# All Substrate/Polkadot dependencies are centralized here using the stable
# release tag from polkadot-sdk. This ensures version alignment across all
# crates and prevents sp-*/sc-*/frame-* version conflicts.
#
# Tag: polkadot-stable2512-rc1 (latest stable as of Nov 2025)
# =============================================================================

[workspace.dependencies]
# --- Substrate Primitives (sp-*) ---
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1", default-features = false }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1", default-features = false }
sp-staking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1", default-features = false }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1", default-features = false }
sp-consensus-pow = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1", default-features = false }

# --- FRAME (frame-*) ---
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1", default-features = false }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1", default-features = false }

# --- Pallets (pallet-*) ---
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1", default-features = false }
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1", default-features = false }
pallet-membership = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1", default-features = false }
pallet-treasury = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1", default-features = false }

# --- Substrate Client (sc-*) ---
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1" }
sc-consensus-pow = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1" }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1" }
sc-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1" }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1" }
sc-utils = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1" }

# --- Substrate Primitives (additional for client) ---
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1" }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1" }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1" }

# --- Build Dependencies ---
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2512-rc1" }

# --- Common Dependencies ---
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
