[workspace]
members = [
    "crypto",
    "circuits/hegemon-field",
    "circuits/transaction",
    "circuits/transaction-core",
    "circuits/batch",
    "circuits/tx-proof-manifest",
    "circuits/settlement",
    "circuits/block",
    "circuits/block-recursion",
    "circuits/bench",
    "circuits/disclosure",
    "circuits/plonky3-spike",
    "circuits/aggregation",
    "state/da",
    "state/merkle",
    "consensus-light-client",
    "consensus",
    "protocol/versioning",
    "protocol/kernel",
    "protocol/shielded-pool",
    "network",
    "pq-noise",
    "wallet",
    "wallet/bench",
    "walletd",
    "tests",
    "node",
    "circuits/superneo-ccs",
    "circuits/superneo-core",
    "circuits/superneo-ring",
    "circuits/superneo-backend-lattice",
    "circuits/superneo-hegemon",
    "circuits/superneo-bench",
    "tools/native-backend-ref",
    "tools/native-backend-timing",
    "spikes/smallwood-tx-shape",
    "zk/cashvm-bridge",
    "fuzz",
]
exclude = ["spikes/recursion"]
resolver = "2"

[workspace.lints.clippy]
# Allow these lints workspace-wide - they're stylistic, not correctness issues
needless_borrow = "allow"
type_complexity = "allow"
too_many_arguments = "allow"
result_large_err = "allow"

[workspace.lints.rust]
# Allow deprecated items - we'll fix these incrementally
deprecated = "allow"

[workspace.package]
authors = ["Pauli Group Inc."]
license = "MIT"
repository = "https://github.com/Pauli-Group/Hegemon"


[workspace.dependencies]
# --- Common Dependencies ---
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
hegemon-field = { path = "circuits/hegemon-field" }

# --- Plonky3 Dependencies ---
p3-air = { git = "https://github.com/Plonky3/Plonky3", rev = "7895d23" }
p3-batch-stark = { git = "https://github.com/Plonky3/Plonky3", rev = "7895d23" }
p3-field = { git = "https://github.com/Plonky3/Plonky3", rev = "7895d23" }
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3", rev = "7895d23" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3", rev = "7895d23" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3", rev = "7895d23" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3", rev = "7895d23" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3", rev = "7895d23" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3", rev = "7895d23" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3", rev = "7895d23" }
p3-lookup = { git = "https://github.com/Plonky3/Plonky3", rev = "7895d23" }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3", rev = "7895d23" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3", rev = "7895d23" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3", rev = "7895d23" }
p3-blake3 = { git = "https://github.com/Plonky3/Plonky3", rev = "7895d23" }
p3-circuit = { git = "https://github.com/Plonky3/Plonky3-recursion", rev = "eff9486" }
p3-circuit-prover = { git = "https://github.com/Plonky3/Plonky3-recursion", rev = "eff9486" }
p3-recursion = { git = "https://github.com/Plonky3/Plonky3-recursion", rev = "eff9486" }

[patch."https://github.com/Plonky3/Plonky3-recursion"]
p3-circuit = { path = "spikes/recursion/vendor/plonky3-recursion/circuit" }
p3-circuit-prover = { path = "spikes/recursion/vendor/plonky3-recursion/circuit-prover" }
p3-recursion = { path = "spikes/recursion/vendor/plonky3-recursion/recursion" }
