[package]
name = "consensus"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bincode = "1"
blake3 = "1.5"
block-circuit = { path = "../circuits/block" }
codec = { workspace = true }
crossbeam-channel = "0.5"
crypto = { package = "synthetic-crypto", path = "../crypto" }
num-bigint = "0.4"
num-traits = "0.2"
parking_lot = "0.12"
p3-batch-stark = { workspace = true }
p3-circuit = { workspace = true }
p3-circuit-prover = { workspace = true }
p3-field = { workspace = true }
p3-recursion = { workspace = true }
p3-uni-stark = { workspace = true }
postcard = { version = "1", default-features = false, features = ["alloc"] }
rayon = "1"
state-da = { path = "../state/da" }
sha2 = "0.10"
sp-core = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
thiserror = "1"
tracing = "0.1"
protocol-versioning = { path = "../protocol/versioning" }
serde = { version = "1", features = ["derive"] }
transaction-circuit = { path = "../circuits/transaction" }
zstd = { version = "0.13", default-features = false }

# Substrate PoW consensus (optional, for full Substrate integration)
sc-consensus-pow = { workspace = true, optional = true }
sp-consensus-pow = { workspace = true, optional = true }
sp-api = { workspace = true, optional = true }

# Runtime dependency for DifficultyApi (optional, for full Substrate integration)
runtime = { path = "../runtime", optional = true, default-features = false, features = ["std"] }

[dev-dependencies]
network = { path = "../network" }
proptest = "1"
state-merkle = { path = "../state/merkle" }
tokio = { version = "1", features = ["macros", "rt", "time", "sync"] }

[features]
default = []
# Enable full Substrate PowAlgorithm implementation
substrate = ["sc-consensus-pow", "sp-consensus-pow", "sp-api", "runtime"]
fast-proofs = ["block-circuit/fast-proofs"]

[lints]
workspace = true
