[package]
name = "consensus"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
batch-circuit = { path = "../circuits/batch" }
bincode = "1"
blake3 = "1.5"
blake2 = "0.10"
block-circuit = { path = "../circuits/block" }
block-recursion = { path = "../circuits/block-recursion" }
tx-proof-manifest = { path = "../circuits/tx-proof-manifest" }
crossbeam-channel = "0.5"
crypto = { package = "synthetic-crypto", path = "../crypto" }
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
parking_lot = "0.12"
p3-batch-stark = { workspace = true }
p3-challenger = { workspace = true }
p3-circuit = { workspace = true }
p3-circuit-prover = { workspace = true }
p3-dft = { workspace = true }
p3-field = { workspace = true }
p3-fri = { workspace = true }
p3-goldilocks = { workspace = true }
p3-lookup = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-recursion = { workspace = true }
p3-symmetric = { workspace = true }
p3-uni-stark = { workspace = true }
postcard = { version = "1", default-features = false, features = ["alloc"] }
rayon = "1"
state-da = { path = "../state/da" }
superneo-hegemon = { path = "../circuits/superneo-hegemon" }
sha2 = "0.10"
thiserror = "1"
tracing = "0.1"
protocol-versioning = { path = "../protocol/versioning" }
serde = { version = "1", features = ["derive"] }
transaction-circuit = { path = "../circuits/transaction" }
zstd = { version = "0.13", default-features = false }

[dev-dependencies]
network = { path = "../network" }
proptest = "1"
state-merkle = { path = "../state/merkle" }
tokio = { version = "1", features = ["macros", "rt", "time", "sync"] }

[features]
default = []
fast-proofs = ["block-circuit/fast-proofs"]

[lints]
workspace = true
