[package]
name = "consensus"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bincode = "1"
blake3 = "1.5"
block-circuit = { path = "../circuits/block", default-features = false }
block-recursion = { path = "../circuits/block-recursion" }
tx-proof-manifest = { path = "../circuits/tx-proof-manifest" }
crossbeam-channel = "0.5"
crypto = { package = "synthetic-crypto", path = "../crypto" }
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
parking_lot = "0.12"
rayon = "1"
state-da = { path = "../state/da" }
superneo-hegemon = { path = "../circuits/superneo-hegemon" }
sha2 = "0.10"
thiserror = "1"
tracing = "0.1"
protocol-versioning = { path = "../protocol/versioning" }
serde = { version = "1", features = ["derive"] }
transaction-circuit = { path = "../circuits/transaction" }
transaction-core = { path = "../circuits/transaction-core" }
zstd = { version = "0.13", default-features = false }

[dev-dependencies]
network = { path = "../network" }
proptest = "1"
serde_json = "1"
state-merkle = { path = "../state/merkle" }
superneo-backend-lattice = { path = "../circuits/superneo-backend-lattice" }
tokio = { version = "1", features = ["macros", "rt", "time", "sync"] }

[features]
default = []
fast-proofs = ["block-circuit/fast-proofs"]

[lints]
workspace = true
