[package]
name = "network"
version = "0.1.0"
edition = "2024"

[dependencies]
aead = "0.5"
aes-gcm = { version = "0.10" }
bincode = "1"
crypto = { package = "synthetic-crypto", path = "../crypto" }
rand = { version = "0.8", features = ["std"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time", "net", "io-util"] }
tokio-util = { version = "0.7", features = ["codec", "compat"] }
tokio-stream = "0.1"
futures = "0.3"
tracing = "0.1"

[dev-dependencies]
proptest = "1"
bincode = "1"
