[package]
name = "hegemon-node"
version = "0.1.0"
edition = "2021"
authors = ["Hegemon Team"]
description = "Hegemon PQ-secure blockchain node"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["json", "ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
bincode = "1.3"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive", "env"] }
consensus = { path = "../consensus" }
crypto = { path = "../crypto", package = "synthetic-crypto" }
futures = "0.3"
hex = "0.4"
network = { path = "../network" }
num-bigint = "0.4"
num-traits = "0.2"
parking_lot = "0.12"
pq-noise = { path = "../pq-noise" }
protocol_versioning = { path = "../protocol/versioning", package = "protocol-versioning" }
rcgen = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
sled = "0.34"
sp-core = { version = "38.1.0", default-features = false, features = ["std"] }
state-merkle = { path = "../state/merkle", package = "state-merkle" }
thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "sync", "time", "signal", "fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
transaction_circuit = { path = "../circuits/transaction", package = "transaction-circuit" }
wallet = { path = "../wallet" }
rand = "0.8"
rust-embed = "8.0"
sha2 = "0.10"
mime_guess = "2.0"
rpassword = "7.4.0"
atty = "0.2.14"
url = "2"
base64 = "0.22"

# Substrate SDK dependencies (optional, enabled with "substrate" feature)
# Note: These use crates.io versions. For production, consider switching to
# git dependencies from polkadot-sdk for better version alignment.
sc-cli = { version = "0.47.0", optional = true }
sc-service = { version = "0.46.0", optional = true }
sc-chain-spec = { version = "38.0.0", optional = true }
sc-consensus-pow = { version = "0.44.0", optional = true }
sp-consensus-pow = { version = "0.42.0", optional = true }
codec = { package = "parity-scale-codec", version = "3", features = ["derive"], optional = true }

jsonrpsee = { version = "0.24", features = ["server", "macros"], optional = true }

# Runtime dependency (for WASM binary and APIs)
runtime = { path = "../runtime", optional = true }

[features]
default = []
test-utils = []

# Enable Substrate-based node implementation (Phase 2.5 with PoW + DifficultyApi)
# 
# This provides:
# - CLI scaffolding (sc-cli)
# - Node service framework (sc-service)
# - Blake3 PoW consensus (sc-consensus-pow)
# - Mining coordination
# - Runtime with WASM binary and DifficultyApi
#
# Phase 2.5 adds:
# - WASM binary for runtime execution
# - DifficultyApi for PoW difficulty queries
# - ConsensusApi for consensus parameters
substrate = [
    "dep:sc-cli",
    "dep:sc-service",
    "dep:sc-chain-spec",
    "dep:sc-consensus-pow",
    "dep:sp-consensus-pow",
    "dep:jsonrpsee",
    "dep:runtime",
    "dep:codec",
]

[dev-dependencies]
rand = "0.8"
tempfile = "3.8"
block-circuit = { path = "../circuits/block" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.21"

# Original custom node binary
[[bin]]
name = "hegemon"
path = "src/bin/node.rs"

# Substrate-based node binary
[[bin]]
name = "hegemon-node"
path = "src/bin/substrate_node.rs"
required-features = ["substrate"]
