[package]
name = "hegemon-node"
version = "0.1.0"
edition = "2021"
authors = ["Hegemon Team"]
description = "Hegemon PQ-secure blockchain node"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["json", "ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
bincode = "1.3"
blake3 = "1.5"
bs58 = "0.5"
clap = { version = "4.5", features = ["derive", "env"] }
consensus = { path = "../consensus", default-features = false }
crypto = { path = "../crypto", package = "synthetic-crypto" }
futures = "0.3"
hex = "0.4"
network = { path = "../network" }
num-bigint = "0.4"
num-traits = "0.2"
once_cell = "1.19"
parking_lot = "0.12"
pq-noise = { path = "../pq-noise" }
protocol_versioning = { path = "../protocol/versioning", package = "protocol-versioning" }
rcgen = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
sled = "0.34"
sp-core = { workspace = true, features = ["std"] }
state-merkle = { path = "../state/merkle", package = "state-merkle" }
thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "sync", "time", "signal", "fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
transaction_circuit = { path = "../circuits/transaction", package = "transaction-circuit" }
wallet = { path = "../wallet" }
rand = "0.8"
rust-embed = "8.0"
sha2 = "0.10"
mime_guess = "2.0"
rpassword = "7.4.0"
atty = "0.2.14"
url = "2"
base64 = "0.22"

# Substrate SDK dependencies (optional, enabled with "substrate" feature)
# Using polkadot-sdk git dependencies for version alignment
sc-cli = { workspace = true, optional = true }
sc-service = { workspace = true, optional = true }
sc-chain-spec = { workspace = true, optional = true }
sc-consensus-pow = { workspace = true, optional = true }
sc-client-api = { workspace = true, optional = true }
sc-executor = { workspace = true, optional = true }
sc-consensus = { workspace = true, optional = true }
sc-transaction-pool = { workspace = true, optional = true }
sc-transaction-pool-api = { workspace = true, optional = true }
sc-basic-authorship = { workspace = true, optional = true }
sc-block-builder = { workspace = true, optional = true }
sc-rpc = { workspace = true, optional = true }
sc-rpc-api = { workspace = true, optional = true }
sc-utils = { workspace = true, optional = true }
substrate-frame-rpc-system = { workspace = true, optional = true }
sp-consensus-pow = { workspace = true, optional = true }
sp-blockchain = { workspace = true, optional = true }
sp-consensus = { workspace = true, optional = true }
sp-keystore = { workspace = true, optional = true }
sp-timestamp = { workspace = true, optional = true }
sp-runtime = { workspace = true, features = ["std"], optional = true }
sp-api = { workspace = true, features = ["std"], optional = true }
sp-io = { workspace = true, features = ["std"], optional = true }
sp-block-builder = { workspace = true, features = ["std"], optional = true }
sp-inherents = { workspace = true, features = ["std"], optional = true }
codec = { workspace = true, optional = true }

# Pallet dependencies for inherent creation
pallet-timestamp = { workspace = true, features = ["std"], optional = true }

jsonrpsee = { version = "0.24", features = ["server", "macros"], optional = true }
tower = { version = "0.4", optional = true }
hyper = { version = "1.5", optional = true }

# Runtime dependency (for WASM binary and APIs)
runtime = { path = "../runtime", optional = true }

# Shielded pool pallet (for RPC types)
pallet-shielded-pool = { path = "../pallets/shielded-pool", optional = true }

# Frame support (for BoundedVec in RPC)
frame-support = { workspace = true, features = ["std"], optional = true }

[features]
default = ["substrate"]
test-utils = []

# Enable Substrate-based node implementation (Phase 2.5 with PoW + DifficultyApi)
# 
# This provides:
# - CLI scaffolding (sc-cli)
# - Node service framework (sc-service)
# - Blake3 PoW consensus (sc-consensus-pow)
# - Mining coordination
# - Runtime with WASM binary and DifficultyApi
#
# Phase 2.5 adds:
# - WASM binary for runtime execution
# - DifficultyApi for PoW difficulty queries
# - ConsensusApi for consensus parameters
#
# Phase 10.2 adds:
# - Full client integration (TFullClient, WasmExecutor)
# - Transaction pool (BasicPool)
# - Block import pipeline
substrate = [
    "dep:sc-cli",
    "dep:sc-service",
    "dep:sc-chain-spec",
    "dep:sc-consensus-pow",
    "dep:sc-client-api",
    "dep:sc-executor",
    "dep:sc-consensus",
    "dep:sc-transaction-pool",
    "dep:sc-transaction-pool-api",
    "dep:sc-basic-authorship",
    "dep:sc-block-builder",
    "dep:sc-rpc",
    "dep:sc-rpc-api",
    "dep:sc-utils",
    "dep:substrate-frame-rpc-system",
    "dep:sp-consensus-pow",
    "dep:sp-blockchain",
    "dep:sp-consensus",
    "dep:sp-keystore",
    "dep:sp-timestamp",
    "dep:sp-runtime",
    "dep:sp-api",
    "dep:sp-io",
    "dep:sp-block-builder",
    "dep:sp-inherents",
    "dep:jsonrpsee",
    "dep:runtime",
    "dep:codec",
    "dep:pallet-timestamp",
    "dep:pallet-shielded-pool",
    "dep:frame-support",
    "dep:tower",
    "dep:hyper",
    "consensus/substrate",
]

[dev-dependencies]
rand = "0.8"
tempfile = "3.8"
block-circuit = { path = "../circuits/block" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.21"

# Substrate-based node binary
[[bin]]
name = "hegemon-node"
path = "src/bin/substrate_node.rs"
required-features = ["substrate"]
