[package]
name = "hegemon-node"
version = "0.10.0"
edition = "2021"
authors = ["Pauli Group Inc."]
description = "Hegemon PQ-secure blockchain node"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["json", "ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
bincode = "1.3"
blake3 = "1.5"
bs58 = "0.5"
clap = { version = "4.5", features = ["derive", "env"] }
consensus = { path = "../consensus", default-features = false }
block-recursion = { path = "../circuits/block-recursion" }
crypto = { path = "../crypto", package = "synthetic-crypto" }
futures = "0.3"
hex = "0.4"
network = { path = "../network" }
num-bigint = "0.4"
num-traits = "0.2"
once_cell = "1.19"
parking_lot = "0.12"
rayon = "1"
pq-noise = { path = "../pq-noise" }
protocol_versioning = { path = "../protocol/versioning", package = "protocol-versioning" }
protocol-kernel = { path = "../protocol/kernel", package = "protocol-kernel" }
protocol-shielded-pool = { path = "../protocol/shielded-pool" }
rcgen = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
sled = "0.34"
state-merkle = { path = "../state/merkle", package = "state-merkle" }
state-da = { path = "../state/da", package = "state-da" }
transaction-core = { path = "../circuits/transaction-core" }
thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "sync", "time", "signal", "fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
transaction_circuit = { path = "../circuits/transaction", package = "transaction-circuit" }
wallet = { path = "../wallet" }
superneo-hegemon = { path = "../circuits/superneo-hegemon" }
rand = "0.8"
rust-embed = "8.0"
sha2 = "0.10"
mime_guess = "2.0"
rpassword = "7.4.0"
url = "2"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
codec = { workspace = true }

[features]
default = []

[dev-dependencies]
rand = "0.8"
tempfile = "3.8"
tokio-tungstenite = "0.21"

# Native node binary. This is the final operator entrypoint.
[[bin]]
name = "hegemon-node"
path = "src/bin/native_node.rs"

[lints]
workspace = true
